[package]
name = "combinerr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# REMOVE dynamic FEATURE BEFORE RELEASE!!!
bevy = { version = "0.8.0", features = ["dynamic"] }
bevy-inspector-egui = "0.12.1"
bevy_flycam = "0.8.1"
bevy_asset_loader = "0.12.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
